Fixed positioning on small screens

--- a/css/common.css
+++ b/css/common.css
@@ -33,7 +33,7 @@ body {
     cursor: pointer;
     font-size: 2em;
     padding: 0.5em;
-    position: absolute;
+    position: fixed;
     text-align: center;
     top: 40%;
     width: 1em;
@@ -49,6 +49,10 @@ body {
 
 .switcher.right {
     right: 1em;
+}
+
+.main-container {
+    padding-bottom: 85px;
 }
 
 .app-icon-container {
@@ -112,7 +116,7 @@ div[app]:hover .app-actions {
 }
 
 .container {
-    padding-top: 8em;
+    padding-top: 10%;
     margin-left: auto;
     margin-right: auto;
     max-width: 1300px;
@@ -133,7 +137,7 @@ footer {
     background-color: #eee;
     bottom: 0;
     padding: 10px;
-    position: absolute;
+    position: fixed;
     width: 100%;
 }
 
